objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CampaignContentDocumentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Content Document</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_cmt__CampaignContentDocument__c.vlocity_cmt__CampaignId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_cmt__CampaignContentDocument__c.vlocity_cmt__IsPrimary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__CampaignContentDocument__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContentDocumentTitle__c</fullName>
        <formula>vlocity_cmt__CampaignContentDocumentId__r.vlocity_cmt__ContentTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmailTemplate__c</fullName>
        <inlineHelpText>Email template used to send email to campaign member.</inlineHelpText>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous Activity</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MassEmailContent__c</fullName>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MassEmailSubject__c</fullName>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessLanguage__c</fullName>
        <defaultValue>&apos;English&apos;</defaultValue>
        <label>Process Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessPrefillBundle__c</fullName>
        <label>Process Prefill Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessSubType__c</fullName>
        <defaultValue>&apos;Default&apos;</defaultValue>
        <label>Process Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessType__c</fullName>
        <defaultValue>&apos;Campaign&apos;</defaultValue>
        <description>It is the OmniScript Type</description>
        <label>Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneCampaign</fullName>
        <active>true</active>
        <description>Mobile Phone Campaign</description>
        <label>MobilePhoneCampaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>